<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_apartment_card"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:layout_marginTop="8dp"
    card_view:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.joooonho.SelectableRoundedImageView
            android:id="@+id/my_apartment_photo"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:sriv_left_top_corner_radius="8dp"
            app:sriv_right_top_corner_radius="8dp"
            android:src="@drawable/apartment"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/edit_my_apartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="80.5sp"
            android:text="@string/edit"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/my_apartment_sub"
            android:layout_width="@dimen/big_circle_size"
            android:layout_height="@dimen/big_circle_size"
            android:layout_margin="8dp"
            android:background="@drawable/big_circle"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/my_apartment_sub_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="3.1sp"
            android:gravity="end"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="Славянский бульвар"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"
            app:layout_constraintStart_toEndOf="@id/my_apartment_sub"/>

        <View
            android:id="@+id/my_apartment_div"
            android:layout_width="@dimen/lil_circle_size"
            android:layout_height="@dimen/lil_circle_size"
            android:background="@drawable/lil_circle"
            android:layout_margin="13dp"
            app:layout_constraintStart_toEndOf="@id/my_apartment_sub_name"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"/>

        <TextView
            android:id="@+id/my_apartment_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="3.1sp"
            android:gravity="end"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="3"
            app:layout_constraintStart_toEndOf="@id/my_apartment_div"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="3.1sp"
            android:gravity="end"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text=" комн."
            app:layout_constraintStart_toEndOf="@id/my_apartment_capacity"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"/>

        <TextView
            android:id="@+id/my_apartment_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:lineSpacingExtra="75.4sp"
            android:textColor="@android:color/black"
            android:text="100 000"
            app:layout_constraintEnd_toStartOf="@id/my_apartment_currency"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"/>

        <TextView
            android:id="@+id/my_apartment_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="$"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_photo"/>

        <TextView
            android:id="@+id/views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:lineSpacingExtra="36.5sp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/views"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_sub"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/views_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:lineSpacingExtra="36.5sp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="12"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_sub"
            app:layout_constraintStart_toEndOf="@id/views"/>

        <TextView
            android:id="@+id/new_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:lineSpacingExtra="36.5sp"
            android:textSize="14sp"
            android:textColor="@color/new_views_color"
            android:text="@string/new_views"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_sub"
            app:layout_constraintStart_toEndOf="@id/views_amount"/>

        <TextView
            android:id="@+id/new_views_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:lineSpacingExtra="36.5sp"
            android:textSize="14sp"
            android:textColor="@color/new_views_color"
            android:text="10"
            app:layout_constraintTop_toBottomOf="@id/my_apartment_sub"
            app:layout_constraintStart_toEndOf="@id/new_views"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>