<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/apartment_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="1.6sp"
            android:textColor="#b3000000"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_light"
            android:text="10 000₽"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/apartment_address"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/subway_line_color"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@+id/text_station"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_station" />

        <TextView
            android:id="@+id/text_station"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="Библиотека имени Ленина"
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/image_clock"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/subway_line_color"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <ImageView
            android:id="@+id/image_clock"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_station"
            app:layout_constraintEnd_toStartOf="@+id/text_arrive_time"
            app:layout_constraintTop_toTopOf="@+id/text_station"
            app:srcCompat="@drawable/ic_access_time_black"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/text_arrive_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="10 мин."
            android:textColor="#000000"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_station"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_station" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_station" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/image_rooms_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/text_rooms_number"
            app:layout_constraintEnd_toEndOf="@+id/text_rooms_number"
            app:layout_constraintStart_toStartOf="@+id/text_rooms_number"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintVertical_bias="0.55"
            app:srcCompat="@drawable/ic_door"
            android:contentDescription="@string/content_description" />

        <ImageView
            android:id="@+id/image_apartment_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/text_apartment_area"
            app:layout_constraintEnd_toEndOf="@+id/text_apartment_area"
            app:layout_constraintStart_toStartOf="@+id/text_apartment_area"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_arrows"
            android:contentDescription="@string/content_description" />

        <ImageView
            android:id="@+id/image_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@id/text_floor"
            app:layout_constraintEnd_toEndOf="@+id/text_floor"
            app:layout_constraintStart_toStartOf="@+id/text_floor"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_floor"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/text_rooms_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="1 ком."
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toStartOf="@+id/text_apartment_area"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_rooms_number" />

        <TextView
            android:id="@+id/text_apartment_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="100 м. кв."
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_apartment_area" />

        <TextView
            android:id="@+id/text_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="3 этаж (из 17)"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/text_apartment_area"
            app:layout_constraintTop_toBottomOf="@+id/image_floor" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_friends" />

        <ImageView
            android:id="@+id/image_friends"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/two_men"
            android:contentDescription="@string/content_description"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_light_cyr"
            android:text="5 общих друзей"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_friends"
            app:layout_constraintStart_toEndOf="@+id/image_friends" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_regular_cyr"
            android:text="Светлана Олегова"
            android:textColor="#55c5b7"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/apartment_owner"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <ImageView
            android:id="@+id/owner_avatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@id/divider3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:srcCompat="@drawable/anon"
            android:contentDescription="@string/content_description" />

        <TextView
            android:id="@+id/about_apartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/apartment_about"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/apartment_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_light_cyr"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_apartment"
            tools:text="2-х комнатная квартира. Сдам на длительный срок Русскоязычной семье. Комнаты изолированные – 17 - 12 кв.м, кухня -6 кв.м, санузел раздельный. Сделан ремонт 2011г. Косметика, сантехника, стеклопакеты... показать полностью" />

        <TextView
            android:id="@+id/full_please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_regular_cyr"
            android:text="@string/apartment_show_full"
            android:textColor="#55c5b7 "
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apartment_description" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_please" />

        <TextView
            android:id="@+id/facilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/apartment_facilities"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/facilities_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/facilities"
            tools:listitem="@layout/item_facility"/>

        <android.support.constraint.Group
            android:id="@+id/facility_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="facilities,facilities_list"/>

        <TextView
            android:id="@+id/button_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/button_rent"
            android:textSize="14sp"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="-2sp"
            android:textColor="@android:color/white"
            android:padding="16dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/facilities_list"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="@id/button_rent"
            app:layout_constraintBottom_toBottomOf="@id/button_rent" />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>